# wildwatch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml
bridge/: README.md  docker-compose.yml  mediamtx.yml  start_bridge.sh  watch_bore.sh  watch_bridges.sh
docs/: FEATURE_FLOWS.md  GENAI_ROADMAP.md  REPO_MAP.md  SETUP.md  videodb-sdk-cheatsheet.md
prompts/: audio.txt  behavior.txt  environment.txt  species.txt
samples/triggers/: CURATION_HANDOFF.md  README.md  _user_urls.txt  manifest.json  waterhole_rich_scene.species.txt
scripts/: audio_chain_smoke.py  bootstrap.py  build_corpus.py  build_digest.py  event_smoke.py  index_corpus.py  iterate_prompt.py  rtstream_audio_smoke.py  rtstream_index_smoke.py  rtstream_smoke.py  run_correlation.py  sdk_full_smoke.py  sdk_integration_smoke.py  sdk_smoke.py  start_live_test.py  upload_corpus.py  ws_listener.py
tests/: conftest.py  test_bg_tasks.py  test_cache_on_failure.py  test_config.py  test_content_routes.py  test_corpus_manifest.py  test_correlation.py  test_dashboard.py  test_digest.py  test_event_log.py  test_events.py  test_ingest.py  test_prompts.py  test_sandbox.py  test_source_routes.py  test_sources.py  test_state_io.py  test_telegram.py  test_usage_route.py  test_webhooks.py  test_wiring.py
wildwatch/: __init__.py  billing.py  correlation.py  dashboard.py  digest.py  event_log.py  events.py  ingest.py  post_upload_analysis.py  prompts.py  rate_limit.py  sandbox.py  sdk_pool.py  sources.py  state_io.py  telegram.py  webhooks.py  wiring.py  ws_listener.py
wildwatch/static/: dashboard.html
