[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildwatch"
version = "0.1.0"
description = "Real-time perception agent for protected-area wildlife monitoring, built on VideoDB."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "skalkii" }]
dependencies = [
    # NOTE: pinned to the upstream hackathon BRANCH, not a commit SHA.
    # A force-push to that branch silently changes the dependency on
    # the next `pip install`. For any post-hackathon use, repin to a
    # commit:
    #   videodb @ git+https://github.com/Video-DB/videodb-python.git@<sha>
    # (find the SHA via `pip show videodb | grep Location` after install).
    "videodb @ git+https://github.com/Video-DB/videodb-python.git@hackathon",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["wildwatch*"]
exclude = ["tests*", "scripts*", "bridge*", "prompts*", "samples*", "demo*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
files = ["wildwatch"]
